# llm-bias-fairness-eval

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
configs/: config.yaml  context_templates.yaml
notebooks/: 02_data_exploration.ipynb  03_general_research.ipynb
src/: __init__.py  common.py  config.py  context_generator.py  data_loader.py  evaluation.py  inference.py  models.py  paths.py
tests/: test_model_eval.py
