[project]
name = "llm-bias-fairness-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "python-box>=7.3.2",
    "ruff>=0.11.11",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "torch-xla[tpu]>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.3",
]
